--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="%PUBLIC_URL%/css/layout.css">
     <link rel="stylesheet" href="%PUBLIC_URL%/css/media-queries.css">
     <link rel="stylesheet" href="%PUBLIC_URL%/css/magnific-popup.css">
-    <link rel="icon" type = "image/jpg" href="%PUBLIC_URL%/images/profilepic.jpg">
+    <link rel="icon" type = "image/jpg" href="%PUBLIC_URL%/images/title_image.PNG">
 
     <title>Abhi's Portfolio</title>
   </head>
