--- a/public/index.html
+++ b/public/index.html
@@ -9,19 +9,16 @@
     <link rel="stylesheet" href="%PUBLIC_URL%/css/layout.css">
     <link rel="stylesheet" href="%PUBLIC_URL%/css/media-queries.css">
     <link rel="stylesheet" href="%PUBLIC_URL%/css/magnific-popup.css">
-    <link rel="icon" type = "image/jpg" href="%PUBLIC_URL%/images/title_image.PNG">
+    <link rel="icon" type = "image/jpg" href="%PUBLIC_URL%/images/browser_image.png">
 
-    <title>Abhi's Portfolio</title>
+    <title>Abhi Balijepalli</title>
   </head>
 
   <body>
     <noscript>
-      You need to enable JavaScript to run this app.
+      <h1>Are you seriously running this without Javascript Enabled on your browser...</h1>
     </noscript>
     <div id="root"></div>
-
-
-
    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
    <script>window.jQuery || document.write('<script src="js/jquery-1.10.2.min.js"><\/script>')</script>
    <script type="text/javascript" src="js/jquery-migrate-1.2.1.min.js"></script>
